# fastapi_suren

./: .gitignore  README.md  items_views.py  main.py  pyproject.toml  requirements.txt
core/: config.py
core/models/: base.py  db_helper.py
users/: crud.py  shemas.py  views.py
